[tool.poetry]
name = "attempt_this_online"
version = "0.1.12"
description = "Try It Online clone"
authors = ["pxeger <_@pxeger.com>"]
license = "Artistic License 2.0"

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.16.0"
msgpack = "^1.0.2"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
